@@ -56,4 +56,6 @@
 
   <adapter factory=".feed.feed_references" name="zeit.cms.syndication" />
   <subscriber handler=".feed.update_feed_metadata_on_checkin" />
+
+  <adapter factory=".feed.FakeXMLReferenceUpdater" />
 </configure>
