@@ -9,6 +9,7 @@ zeit.cms changes
 - Obskurer Clipboard/Ghost-Fehler behoben (#6631).
 - Neues Tab 'References', in dem die Objekte aufgelistet werden, von denen ein
   Objekt referenziert wird (#6160).
+- Fehler beim Feed-Update mit FakeEntry behoben (#7391).
 
 
 1.43.0 (2010-06-02)
